--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -1,5 +1,10 @@
 {% extends "wagtailadmin/home.html" %}
+{% load static %}
 
 {% block branding_welcome %}Safepal Dashboard{% endblock %}
 
 {# todo add the chat logic here #}
+
+{% block content %}
+    <body><iframe src="http://54.213.147.100/chat"></iframe></body>
+{% endblock %}
