--- a/templates/chat_reply.html
+++ b/templates/chat_reply.html
@@ -18,10 +18,11 @@
 	<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 	<link rel="stylesheet" type="text/css" href="https://safepal-production.s3-us-west-2.amazonaws.com/cdn/styles.css">
 
-    <meta charset="UTF-8">
-    <title>Chat Reply</title>
+
+	    <meta charset="UTF-8">
+	    <title>Chat Repl</title>
 </head>
-<body>
+<body id="body_tag">
 
 	<div id="frame">
 		<div id="sidepanel">
@@ -86,7 +87,7 @@
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 		<script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-firestore.js"></script> 
+	<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-firestore.js"></script>
 
 		<!-- TODO: Add SDKs for Firebase products that you want to use
 		     https://firebase.google.com/docs/web/setup#available-libraries -->
