--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -5,6 +5,6 @@
 
 {# todo add the chat logic here #}
 
-{% block content %}
-    <body><iframe src="http://54.213.147.100/chat"></iframe></body>
-{% endblock %}
+{#{% block content %}#}
+{#    <body><iframe src="http://54.213.147.100/chat"></iframe></body>#}
+{#{% endblock %}#}
