--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -1,10 +1,32 @@
 {% extends "wagtailadmin/home.html" %}
 {% load static %}
 
-{% block branding_welcome %}Safepal Dashboard{% endblock %}
+{#{% block branding_welcome %}Safepal Dashboard{% endblock %}#}
 
 {# todo add the chat logic here #}
 
-{#{% block content %}#}
-{#    <body><iframe src="http://54.213.147.100/chat"></iframe></body>#}
-{#{% endblock %}#}
+{% block content %}
+{#    {{ block.super }}#}
+    <header class="merged nice-padding">
+        <div class="row row-flush">
+            <div class="col1">
+                <div class="avatar"><img src="https://safepal-production.s3-us-west-2.amazonaws.com/icons/woman_color.png" alt="" /></div>
+            </div>
+            <div class="col9">
+                <h1>{% block branding_welcome %}Welcome to the Safepal Dashboard{% endblock %}</h1>
+                <div class="user-name">{{ user.get_full_name|default:user.get_username }}</div>
+            </div>
+        </div>
+    </header>
+{#    <h1 style="margin: auto; width: 50%; padding: 10px;">Safepal Dashboard</h1>#}
+    <h1><a style="background-color: #00676A;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 30px;
+  font-size: 16px;" href="http://54.213.147.100/chat">Chat</a></h1>
+{% endblock %}
