removed scroll to top

--- a/templates/chat_reply.html
+++ b/templates/chat_reply.html
@@ -95,7 +95,8 @@
 		<script  src="https://safepal-production.s3-us-west-2.amazonaws.com/cdn/app.js"></script>
 
 
-	<script >$(".messages").animate({ scrollTop: $(document).height() }, "fast");
+	<script >
+		// $(".messages").animate({ scrollTop: $(document).height() }, "fast");
 
 	$("#profile-img").click(function() {
 		$("#status-options").toggleClass("active");
