added chat iframe

--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -18,15 +18,5 @@
             </div>
         </div>
     </header>
-{#    <h1 style="margin: auto; width: 50%; padding: 10px;">Safepal Dashboard</h1>#}
-    <h1><a style="background-color: #00676A;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin-top: 30px;
-  margin-left: 30px;
-  font-size: 16px;" href="http://54.213.147.100/chat">Chat</a></h1>
+<iframe style="width: 100%; height: 100vh;" src="http://ec2-54-213-147-100.us-west-2.compute.amazonaws.com/chat"></iframe>
 {% endblock %}
