--- a/templates/wagtailadmin/base.html
+++ b/templates/wagtailadmin/base.html
@@ -6,6 +6,5 @@
 {% endblock %}
 {% block branding_title %}Safepal Dashboard{% endblock %}
 {% block branding_logo %}
-    <img src="https://safepal-production.s3-us-west-2.amazonaws.com/icons/woman_color.png" alt="Safepal project" width="80" />
-{#    <img src="http://dashboard.safepal.co/images/logo.png" alt="Safepal project" width="80" />#}
+	<img src="https://www.safepal.co/images/logo.png" alt="Safepal project" width="80" />
 {% endblock %}
