--- a/templates/wagtailadmin/login.html
+++ b/templates/wagtailadmin/login.html
@@ -1,2 +1,3 @@
 {% extends "wagtailadmin/login.html" %}
+{% block branding_title %}Safepal Dashboard{% endblock %}
 {% block branding_login %}Sign in to Safepal Dashboard{% endblock %}
