--- a/templates/wagtailadmin/base.html
+++ b/templates/wagtailadmin/base.html
@@ -6,5 +6,5 @@
 {% endblock %}
 {% block branding_title %}Safepal Dashboard{% endblock %}
 {% block branding_logo %}
-	<img src="https://www.safepal.co/images/logo.png" alt="Safepal project" width="80" />
+	<img src="https://safepal-production.s3-us-west-2.amazonaws.com/icons/safepal_logo_large.png" alt="Safepal project" width="80" />
 {% endblock %}
