updated chat url

--- a/templates/chat_reply.html
+++ b/templates/chat_reply.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html><html class=''>
 <head>
+	<!-- NOTE: THE CSS AND JS FILES THAT RUN THIS ARE STORED ON A CDN ON AWS
+	https://safepal-production.s3-us-west-2.amazonaws.com/cdn/app.js
+	https://safepal-production.s3-us-west-2.amazonaws.com/cdn/styles.css
+
+	Please download those files edit and reupload them when change is needed
+	 -->
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
