--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -18,5 +18,5 @@
             </div>
         </div>
     </header>
-<iframe style="width: 100%; height: 100vh;" src="http://ec2-54-213-147-100.us-west-2.compute.amazonaws.com/chat"></iframe>
+<iframe style="width: 100%; height: 100vh;" src="https://webdashboard.safepal.co/chat"></iframe>
 {% endblock %}
