--- a/templates/wagtailadmin/home.html
+++ b/templates/wagtailadmin/home.html
@@ -18,5 +18,5 @@
             </div>
         </div>
     </header>
-<iframe style="width: 100%; height: 100vh;" src="{{ request.get_host }}/chat"></iframe>
+<iframe style="width: 100%; height: 100vh;" src="https://{{ request.get_host }}/chat"></iframe>
 {% endblock %}
